# arm-asr

./: README.md  pull.sh
cpp/: CMakeLists.txt  wenet.cc
cpp/avatr/: CMakeLists.txt  avatr.cc  avatr.h
cpp/cmake/: libtorch.cmake  onnx.cmake
cpp/decoder/: CMakeLists.txt  onnx_asr_model.h
cpp/vad/: CMakeLists.txt  vad.cc  vad.h  vad.h-bak  webrtcvad.cc  webrtcvad.h  wvad.cc  wvad.h
java/com/mobvoi/wenet/: MainActivity.java
